fixed minor layout issues

--- a/public/desktop.css
+++ b/public/desktop.css
@@ -18,6 +18,11 @@
         margin: 0 3vw;
     }
 
+    #lasr .index__page .portal-container,
+    #gate .portal-container {
+        gap: 180px;
+    }
+
     .bank .note.active {
         margin: -13.5% -6%;
         padding: 5px 10px;
