--- a/public/mobile.css
+++ b/public/mobile.css
@@ -57,6 +57,11 @@
         background-position: -35px 0;
     }
 
+    #gate .portal-container {
+        gap: 20px;
+        flex-flow: column nowrap;
+    }
+
     .bank .note.active {
         margin: -10% 0%;
         padding: 5px;
